[package]
name = "hello-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says="0.2.1"
rand="0.8.4"
csv = "1.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
termion = "1.5.6"